<resources>
    <string name="app_name">VB Menu App</string>
    <string name="menu">Menu</string>


    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar">Registar</string>
    <string name="enter_mail">Ingresa un mail valido y crea una contraseña para registrarte</string>
    <string name="enter_mail_pass">Si sos parte del staff ingresa tu mail y contraseña</string>
    <string name="sin_comentarios">Sin comentarios</string>
    <string name="forma_de_pago">Forma de pago:</string>
    <string name="textview">$TextView</string>
    <string name="click_qr">Haga click en la camara y escanee el codigo QR de su mesa</string>
    <string name="viejo_bohemio">Viejo Bohemio</string>
    <string name="menu_app">Menu App</string>
    <string name="pedidos">Pedidos</string>
    <string name="ingresar">ingresar</string>
    <string name="contrase_a">contraseña</string>
    <string name="email">email</string>
    <string name="si_sos_parte_del_staff_ingresa_tu_mail_y_contrase_a">Si sos parte del staff ingresa tu mail y contraseña</string>
    <string name="login">Login</string>
    <string name="tomar_pedido">Tomar pedido</string>
    <string name="cancelar_pedido">Cancelar Pedido</string>
    <string name="tu_pedido">Tu Pedido</string>
    <string name="confirmar_pedido">Confirmar Pedido</string>
    <string name="efectivo">Efectivo</string>
    <string name="tarjeta_otros">Tarjeta/Otros</string>
    <string name="deja_tu_comentario">Deja tu comentario</string>
    <string name="necesito_que_un_a_camarera_o_se_acerque_a_la_mesa">Necesito que un/a camarera/o se acerque a la mesa</string>
    <string name="como_vas_a_pagar">Como vas a pagar?</string>
    <string name="comentarios">Comentarios:</string>
    <string name="total">Total:</string>
    <string name="ingresa_la_clave">ingresa la clave</string>
    <string name="clave_para_realizar_pedidos">Clave para realizar pedidos</string>
    <string name="ingresa_la_nueva_clave">ingresa la nueva clave</string>
    <string name="aceptar">aceptar</string>
    <string name="no_hay_ordenes_en_esta_lista">NO HAY ORDENES EN ESTA LISTA</string>
    <string name="solicita_camarero_a">Solicita camarero/a!!!</string>
    <string name="tu_orden_ya_fue_confirmada">Tu orden ya fue confirmada!</string>
    <string name="pronto_lo_llevaran_a_tu_mesa">Pronto lo llevaran a tu mesa</string>
    <string name="puede_realizar_un_nuevo_pedido_capturando_el_codigo_qr_de_su_mesa">(puede realizar un nuevo pedido capturando el codigo QR de su mesa)</string>
</resources>