<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="3dp"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true"
    tools:context=".view.fragment.OrderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonToProcessOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="38dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/colorTextoBlanco"
                android:text="@string/tomar_pedido"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/buttonConfirmOrder"
                app:layout_constraintStart_toStartOf="@id/buttonCancelOrder"
                app:layout_constraintTop_toBottomOf="@id/checkBoxNeedWait" />

            <Button
                android:id="@+id/buttonCancelOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="38dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/colorTextoBlanco"
                android:text="@string/cancelar_pedido"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassOrder" />

            <TextView
                android:id="@+id/textViewTitleOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/tu_pedido"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewOrder"
                android:layout_width="wrap_content"
                android:layout_height="332dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTitleOrder" />

            <Button
                android:id="@+id/buttonConfirmOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="38dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/colorTextoBlanco"
                android:text="@string/confirmar_pedido"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/buttonCancelOrder" />

            <RadioGroup
                android:id="@+id/radioGroupOrder"
                android:layout_width="0dp"
                android:layout_height="89dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitleRadioOrder">

                <RadioButton
                    android:id="@+id/radioButtonEfectivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/efectivo" />

                <RadioButton
                    android:id="@+id/radioButtonOtros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tarjeta_otros" />
            </RadioGroup>

            <EditText
                android:id="@+id/editTextCommentsOrder"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:gravity="top|start"
                android:hint="@string/deja_tu_comentario"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="3"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="@id/recyclerViewOrder"
                app:layout_constraintStart_toStartOf="@id/textViewTitleCommentsOrder"
                app:layout_constraintTop_toBottomOf="@id/textViewTitleCommentsOrder" />

            <CheckBox
                android:id="@+id/checkBoxNeedWait"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/necesito_que_un_a_camarera_o_se_acerque_a_la_mesa"
                app:layout_constraintEnd_toEndOf="@id/recyclerViewOrder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextCommentsOrder" />

            <TextView
                android:id="@+id/textViewTitleRadioOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="10dp"
                android:text="@string/como_vas_a_pagar"
                app:layout_constraintStart_toStartOf="@+id/recyclerViewOrder"
                app:layout_constraintTop_toBottomOf="@+id/textViewTotalOrder" />

            <TextView
                android:id="@+id/textViewTitleCommentsOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/comentarios"
                app:layout_constraintStart_toStartOf="@id/textViewTitleRadioOrder"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupOrder" />

            <TextView
                android:id="@+id/textViewTotalOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textViewTitleTotalOrder"
                app:layout_constraintTop_toBottomOf="@id/textViewTitleTotalOrder"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="382dp" />

            <TextView
                android:id="@+id/textViewTitleTotalOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/total"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/recyclerViewOrder"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewOrder"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="356dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorTextoOscuro"
                android:gravity="center"
                android:textColorHint="@color/colorTextoOscuro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxNeedWait">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassFragmentOrder"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:hint="@string/ingresa_la_clave"
                    android:inputType="textPassword"
                    android:textColor="@color/colorTextoOscuro"
                    android:textColorHint="@color/colorTextoOscuro"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.cardview.widget.CardView>