<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textViewTitleLogin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/si_sos_parte_del_staff_ingresa_tu_mail_y_contrase_a"
            android:textColor="@color/colorTextoOscuro"
            android:textSize="20sp"
            android:visibility="visible" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:elevation="3dp"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/linearLayoutIniciarSesionFragmentLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/colorTextoOscuro"
                    android:textColorHint="@color/colorTextoOscuro">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmailFragmentLogin"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/colorAccent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorTextoOscuro"
                        android:textColorHint="@color/colorTextoOscuro"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/colorTextoOscuro"
                    android:textColorHint="@color/colorTextoOscuro"
                    app:passwordToggleDrawable="@drawable/icon_selector"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPasswordFragmentLogin"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/colorAccent"
                        android:hint="@string/contrase_a"
                        android:inputType="textPassword"
                        android:textColor="@color/colorTextoOscuro"
                        android:textColorHint="@color/colorTextoOscuro"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>



                <Button
                    android:id="@+id/buttonIngresarFragmentLogin"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/ingresar"
                    android:textColor="@color/colorTextoBlanco" />



            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </LinearLayout>

</ScrollView>
