<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_gradient_cell"
        android:padding="10dp">

    <Button
        android:id="@+id/buttonSkip"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="120dp"
        android:text="Skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewClickHome" />


    <ImageView
        android:id="@+id/buttonScan"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="335dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewHome2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewClickHome"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/buttonScan"
        android:text="@string/click_qr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viejo_bohemio"
        android:fontFamily="@font/viejo_bohemio"
        android:textSize="60sp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewHome2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_app"
        android:fontFamily="sans-serif-black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHome" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>